--- a/frontend/src/app/security/change-password/change-password.page.html
+++ b/frontend/src/app/security/change-password/change-password.page.html
@@ -11,20 +11,50 @@
 </ion-header>
 
 <ion-content>
-  <div class="container">
-    <ion-item lines="none">
-      <ion-input placeholder="Old password" type="password"></ion-input>
-    </ion-item>
-    <ion-item lines="none">
-      <ion-input placeholder="New password" type="password"></ion-input>
-    </ion-item>
-    <ion-item lines="none">
-      <ion-input placeholder="Retype new password" type="password"></ion-input>
-    </ion-item>
-    <div class="ion-text-center">
-      <ion-button mode="ios" (click)="gotoService()">
+  <form class="container" [formGroup]="updatePasswordForm" (ngSubmit)="updatePassword()" novalidate>
+      <ion-item lines="full">
+        
+      <ion-icon class="label-icon" name="lock-open-outline" size="small" slot="start"></ion-icon>
+      <ion-label class="ion-label" position="floating">Old Password<span class="required"><sup>*</sup></span></ion-label>
+      <ion-input formControlName="old_password" type="password"></ion-input>
+      
+      </ion-item>
+      <span class="error ion-padding" *ngIf="submitted && updatePasswordFormCtrl.old_password.errors?.required">
+        Old Password is required.
+      </span>
+      <span class="error ion-padding" *ngIf="submitted && updatePasswordFormCtrl.old_password.errors?.minlength">
+        Min 6 chars long.
+      </span>
+      <ion-item lines="full">
+        <ion-icon  class="label-icon" size="small" name="lock-closed-outline" slot="start"></ion-icon>
+        <ion-label class="ion-label" position="floating">New Password<span class="required"><sup>*</sup></span></ion-label>
+        <ion-input formControlName="new_password" type="password"></ion-input>
+      </ion-item>
+      <span class="error ion-padding" *ngIf="submitted && updatePasswordFormCtrl.new_password.errors?.required">
+        New Password is required.
+      </span>
+      <span class="error ion-padding" *ngIf="submitted && updatePasswordFormCtrl.new_password.errors?.minlength">
+        Min 6 chars long.
+      </span>
+      <ion-item lines="full">
+        <ion-icon class="label-icon" size="small" name="lock-closed-outline" slot="start"></ion-icon>
+        <ion-label class="ion-label" position="floating">Confirm New Password<span class="required"><sup>*</sup></span></ion-label>
+        <ion-input formControlName="confirm_new_password" type="password"></ion-input>
+      </ion-item>
+      <span class="error ion-padding" *ngIf="submitted && updatePasswordFormCtrl.confirm_new_password.errors?.required">
+        Confirm New Password is required.
+      </span>
+      <span class="error ion-padding" *ngIf="submitted && updatePasswordFormCtrl.confirm_new_password.errors?.minlength">
+        Min 6 chars long.
+      </span>
+      <span class="error ion-padding" *ngIf="submitted && updatePasswordFormCtrl.confirm_new_password.errors?.passwordMismatch">
+        New Password Mismatch
+      </span>
+
+    
+      <button class="btn btn-primary text-white" ion-button mode="ios">
         Update password
-      </ion-button>      
-    </div>
-  </div>
+      </button>      
+    
+  </form>
 </ion-content>
