--- a/frontend/src/app/security/change-password/change-password.page.scss
+++ b/frontend/src/app/security/change-password/change-password.page.scss
@@ -1,40 +1,69 @@
 
 ion-input {
-  --placeholder-opacity: .9 !important;
+
   --padding-top: 0;
   --padding-bottom: 0;
   font-family: 'Poppins';
   font-style: normal;
-  font-weight: 500;
+  font-weight: 400;
   font-size: 12px;
-  line-height: 18px;
-  --placeholder-color: rgba(0, 54, 121, 0.6) !important;
+  line-height: 16px;
+  color: #808080; 
+  --placeholder-color: #808080bd !important;
 }
 ion-item {
-  color: #003679;
+  color: #9ACD32;
   border-radius: 6px;
-  --background: rgba(0, 54, 121, 0.1);
+  --background: #ffffff;
   --min-height: 40px;
-  --background-hover: #ffffff;
+  width: 311px;
   margin: 10px 0px;
 
   ion-label {
-    --font-size: 12px !important;
-    line-height: 18px;
-    --font-weight: 500;
-    --color: rgba(0, 54, 121, 0.6);
+    --font-size: 8px !important;
+    line-height: 14px;
+    --font-weight: 400 !important;;
+    --color: #808080;
   }
 }
-ion-button {
-  width: 241px;
+.btn {
+  width: 300px;
   min-height: 40px;
-  --border-radius: 6px !important;
+  --border-radius: 20px !important;
   margin-top: 20px !important;
   color: #ffffff;
+  font-family: 'Poppins';
+  font-style: normal !important;
+  font-weight: 500 !important;
+  font-size: 14px !important;
+  line-height: 20px;
+  background: linear-gradient(90deg, #9ACD32 0%, #056608 157.2%) !important;
 }
 
+.text-center {
+  text-align: center;
+}
+.error {
+  color: red;
+  font-size:8px;
+}
+.required{
+  color: red;
+  font-size:12px;
+  margin-top:-8px;
+}
 
 .container {
   padding: 100px 35px!important;
 }
 
+.label-icon {
+  margin-left:-8px;
+  color: #9ACD32;
+}
+
+.ion-label {
+  margin-left:0px;
+  font-size:12px;
+
+}
