--- a/frontend/src/app/privacy-policy/privacy-policy.page.html
+++ b/frontend/src/app/privacy-policy/privacy-policy.page.html
@@ -12,20 +12,20 @@
 
 <ion-content>
   <div class="privacy-policy">
-    <h4>ADIKPOPAY</h4>
+    <h4>ZAPPY</h4>
     <h4>END USER LICENSE AGREEMENT</h4>
     <small class="text-danger">
       Please read carefully the terms and conditions of this End User License and Agreement (EULA) before downloading,
-      installing or using AdikpoPay website/app provided by Rulsoft Ltd("Rulsoft"). By signing up on the AdikpoPay website/app
+      installing or using ZAPPY website/app powered by spreadiT LTD". By signing up on the ZAPPY website/app
       you are agreeing to be bound by the following terms and conditions.
     </small>
     <div class="py-4">
       <p>
-        This <strong>EULA</strong>  is a legal agreement between you and Rulsoft and govern your use of the AdikpoPay website/app on your device. 
-        The content of the EULA is binding and is not subject to any varying terms or condition, unless as provided by RULSOFT LTD("RULSOFT")bundleRenderer.renderToStreamsubsequently upon due notice to the End User.
+        This <strong>EULA</strong>  is a legal agreement between you and spreadiT and govern your use of the ZAPPY website/app on your device. 
+        The content of the EULA is binding and is not subject to any varying terms or condition, unless as provided by RULSOspreadiTOFT")bundleRenderer.renderToStreamsubsequently upon due notice to the End User.
       </p>
       <strong>Definitions</strong>
-      <p><strong>"App"</strong> the AdikpoPay application on the Google Play Store or Apple App Store</p>
+      <p><strong>"App"</strong> the ZAPPY application on the Google Play Store or Apple App Store</p>
     </div>
   </div>
 </ion-content>
