--- a/frontend/src/app/profile/profile/profile.page.html
+++ b/frontend/src/app/profile/profile/profile.page.html
@@ -1,13 +1,13 @@
   <ion-toolbar mode="ios">
     <ion-buttons mode="ios"  slot="start">
-      <ion-icon class="icon back-arrow"[routerLink]="['/walk-through']" name="arrow-back-sharp"></ion-icon>
+      <ion-icon class="icon back-arrow"[routerLink]="['/user-dashboard/home']" name="arrow-back-sharp"></ion-icon>
     </ion-buttons>
     <ion-title>Profile</ion-title>
   </ion-toolbar>
 
 <ion-content>
   <div class="container">
-    <ion-segment (ionChange)="segmentChanged($event)" value="personal" mode="ios" value="personal">
+    <ion-segment (ionChange)="segmentChanged($event)" mode="ios" value="personal">
       <ion-segment-button value="personal">
         <ion-label>Personal</ion-label>
       </ion-segment-button>
