--- a/frontend/src/app/security/change-password/change-password.page.html
+++ b/frontend/src/app/security/change-password/change-password.page.html
@@ -53,7 +53,7 @@
 
     
       <button class="btn btn-primary text-white" ion-button mode="ios">
-        Update password
+        Change password
       </button>      
     
   </form>
