fix for profile module, fix for dob and 1st phase of user settings completed

--- a/frontend/src/app/dashboard/dashboard/dashboard.page.html
+++ b/frontend/src/app/dashboard/dashboard/dashboard.page.html
@@ -61,7 +61,11 @@
           <ion-chip color="secondary" (click)="gotoService('data-bundle')"></ion-chip>
           -->
           <ion-chip (click)="gotoService('mobile-airtime')" color="secondary">
-              <ion-icon name="cash" color="primary"></ion-icon>
+          
+            <ion-icon name="cash" color="primary"></ion-icon>
+          <!--
+              <img class="img" src="../../assets/imgs/airtime-and-data.jpg" alt="Airtime & Mobile Data">
+          -->
           </ion-chip><br>
           <ion-label color="dark" style="padding-left:0px;">Airtime & Data Bundle</ion-label>
           </div>
@@ -69,15 +73,23 @@
         <ion-col>
           <div>
           <ion-chip color="secondary">
-              <ion-icon name="card" color="primary"></ion-icon>
-          </ion-chip><br>
+          
+            <ion-icon name="card" color="primary"></ion-icon>
+          <!--
+              <img class="img" src="../../assets/imgs/sim-hosting.jpg" alt="SIM Hosting">
+          -->
+          </ion-chip>
+          <br>
           <ion-label color="dark" style="padding-left:0px;">SIM Hosting</ion-label>
           </div>
         </ion-col>
         <ion-col>
           <div>
             <ion-chip color="secondary" (click)="gotoService('data-bundle')">
-              <ion-icon name="archive" color="primary"></ion-icon>
+              <ion-icon name="share-social" color="primary"></ion-icon>
+            <!--
+            <img class="img" src="../../assets/imgs/airtime-and-data.jpg" alt="Airtime & Mobile Data">
+            -->
           </ion-chip><br>
           <ion-label color="dark" style="padding-left:0px;">Share Data</ion-label>
           </div>
