--- a/frontend/src/app/feature/feature/feature.page.scss
+++ b/frontend/src/app/feature/feature/feature.page.scss
@@ -23,7 +23,7 @@ ion-row {
   font-weight: 500 !important;
   font-size: 14px !important;
   line-height: 12px;
-  color: #003679;
+  color: #9ACD32;
 }
 
 .avatar-main .caption {
@@ -32,6 +32,61 @@ ion-row {
   font-weight: normal;
   font-size: 8px;
   line-height: 12px;
-  color: rgba(0, 54, 121, 0.6);
+  color: #9ACD32;
   text-align: center;
+}
+
+.personal{
+  margin-top: 25px !important;
+}
+.avatar {
+  height:10vh;
+  width:10vh;
+}
+ion-title {
+  font-size:0.5vh;
+}
+.property{
+  font-size:12px;
+  font-weight:500;
+}
+span{
+  font-size:8px;
+  font-weight: normal;
+  color:#1e1f1d;
+ // margin-right: 0vh;
+}
+ion-icon {
+  height: 1.8vh;
+  //margin-right: -5px;
+  color:#9ACD32;
+}
+button {
+  margin: 0 auto !important;
+}
+
+.back-arrow {
+  padding-top:9px;
+  text-align: left !important;
+  margin-left: -5px !important;
+  color: #424242;
+}
+/*
+.title {
+  font-weight: 600;
+  font-size:10px;
+}
+*/
+
+ion-list {
+  margin-left:-50px;
+  //height: 1px;
+  
+}
+ion-item {
+  height: 7vh;
+}
+label {
+  font-weight:600;
+  font-size:12px;
 }
