--- a/frontend/src/app/security/security/security.page.html
+++ b/frontend/src/app/security/security/security.page.html
@@ -14,8 +14,11 @@
     <ion-segment-button value="security">
       <ion-label>Security</ion-label>
     </ion-segment-button>
+    <ion-segment-button value="settings">
+      <ion-label>Settings</ion-label>
+    </ion-segment-button>
     <ion-segment-button value="features">
-      <ion-label>Features</ion-label>
+      <ion-label>About Zappy</ion-label>
     </ion-segment-button>
   </ion-segment>
 </div>
