--- a/frontend/src/global.scss
+++ b/frontend/src/global.scss
@@ -35,5 +35,22 @@ $white: '#ffffff';
     --color:#9ACD32;
 }
 
+.zappy-popover {
+    --backdrop-opacity:0.5
+}
+
+.alert-title.sc-ion-alert-md {
+    color: var(--ion-text-color, #000);
+    font-size: 14px;
+    font-weight: 600;
+    text-align: center;
+}
+.alert-message.sc-ion-alert-md {
+    max-height: 160px;
+    font-size: 10px;
+    text-align: center;
+    margin-left:10px;
+}
+
 
  
