--- a/frontend/src/app/profile/settings/automated-reports/automated-reports.component.html
+++ b/frontend/src/app/profile/settings/automated-reports/automated-reports.component.html
@@ -1,5 +1,5 @@
 <ion-list mode="ios">
-  <ion-radio-group value="{{userData.report_option}}">
+  <ion-radio-group [value]="userData.report_option">
     <ion-list-header>
       <ion-label>Automated Reports</ion-label>
     </ion-list-header>
