--- a/frontend/src/app/profile/settings/commission-regime/commission-regime.component.html
+++ b/frontend/src/app/profile/settings/commission-regime/commission-regime.component.html
@@ -1,5 +1,5 @@
 <ion-list mode="ios">
-  <ion-radio-group value="{{userData.commission_regime}}">
+  <ion-radio-group [value] ="userData.commission_regime">
     <ion-list-header>
       <ion-label>Set Commission Regime</ion-label>
     </ion-list-header>
