Transaction history, beneficiary group, and wallet redesign

--- a/frontend/src/app/dashboard/dashboard/dashboard.page.html
+++ b/frontend/src/app/dashboard/dashboard/dashboard.page.html
@@ -47,15 +47,15 @@
           <ion-chip (click)="gotoService('mobile-airtime')" color="secondary">
               <ion-icon name="archive" color="primary"></ion-icon>
           </ion-chip><br>
-          <ion-label color="dark" style="padding-left:10px;">Airtime</ion-label>
+          <ion-label color="dark" style="padding-left:10px;">Airtime & Data</ion-label>
           </div>
         </ion-col>
         <ion-col>
           <div>
-          <ion-chip color="secondary" (click)="gotoService('data-bundle')">
+          <ion-chip color="secondary" (click)="gotoService('beneficiary-group')">
               <ion-icon name="wallet" color="primary"></ion-icon>
           </ion-chip><br>
-          <ion-label color="dark" style="padding-left:0px;">Data Bundle</ion-label>
+          <ion-label color="dark" style="padding-left:0px;">Beneficiary Group</ion-label>
           </div>
         </ion-col>
         <ion-col>
